<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/appbar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/ten_dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_reg_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editext_reg_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reg_pin"
                android:inputType="numberPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_reg_confirm_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editext_reg_confirm_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reg_confirm_pin"
                android:inputType="numberPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_reg_emergency_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editext_reg_emergency_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reg_emergency_pin"
                android:maxLength="5"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_reg_confirm_emergency_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editext_reg_confirm_emergency_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reg_confirm_emergency_pin"
                android:maxLength="5"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.android.chickenbuzz.componenets.SmoothCheckBox
                android:id="@+id/smoothcheckbox_accept_terms"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:paddingTop="5dp"
                app:color_checked="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:text="@string/accept_terms" />
        </LinearLayout>-->

        <Button
            android:id="@+id/btn_reg_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_save"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>

