<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <RelativeLayout
            android:id="@+id/call_police_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/header_button_selector"
            android:clickable="true"
            >

            <ImageView
                android:id="@+id/btn_call_police"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_human_greeting"
                android:text="@string/button_next"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_call_police"
                android:layout_centerHorizontal="true"
                android:text="@string/call_police"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/medical_help_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/header_button_selector"
            android:clickable="true"
            >

            <ImageView
                android:id="@+id/btn_medical_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_ambulance"
                android:text="@string/button_next"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_medical_help"
                android:layout_centerHorizontal="true"
                android:text="@string/medical_help"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buzz_contacts_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/header_button_selector"
            android:clickable="true"
            >

            <ImageView
                android:id="@+id/btn_buzz_contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_contact_mail"
                android:text="@string/button_next"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_buzz_contacts"
                android:layout_centerHorizontal="true"
                android:text="@string/buzz_contacts"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/watch_me_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/header_button_selector"
            android:clickable="true"
            >

            <ImageView
                android:id="@+id/btn_watch_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_security"
                android:text="@string/button_next"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_watch_me"
                android:layout_centerHorizontal="true"
                android:text="@string/watch_me"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>